Add dev dependencies for formatting, linting, and debugging

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,12 @@ daphne = "*"
 channels = "*"
 
 [dev-packages]
+flake8 = "*"
+pdbpp = "*"
+black = "*"
 
 [requires]
 python_version = "3.10"
+
+[pipenv]
+allow_prereleases = true
