Add api with json endpoints

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ django = "*"
 daphne = "*"
 channels = "*"
 channels-redis = "*"
+djangorestframework = "*"
+psycopg2-binary = "*"
+django-environ = "*"
 
 [dev-packages]
 flake8 = "*"
