--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ djangorestframework = "*"
 psycopg2-binary = "*"
 django-environ = "*"
 django-extensions = "*"
+django-on-heroku = "*"
 
 [dev-packages]
 flake8 = "*"
